commiting changes for getting rid of unsused vars in auth fast leader elec
git-svn-id: https://svn.apache.org/repos/asf/hadoop/zookeeper/trunk@670948 13f79535-47bb-0310-9956-ffa450edef68